# confy-cpp

./: .gitignore  API.md  CMakeLists.txt  README.md  USAGE.md
cmake/: confy-config.cmake.in
include/confy/: Config.hpp  DotPath.hpp  EnvMapper.hpp  Errors.hpp  Exceptions.hpp  Loader.hpp  Merge.hpp  Parse.hpp  Util.hpp  Value.hpp
scripts/: build.sh
src/: Config.cpp  DotPath.cpp  EnvMapper.cpp  Loader.cpp  Merge.cpp  Parse.cpp  Util.cpp  cli_main.cpp
tests/: CMakeLists.txt  test_cli.cpp  test_config.cpp  test_dotpath.cpp  test_env_mapper.cpp  test_loader.cpp  test_main.cpp  test_merge.cpp  test_parse.cpp  test_util.cpp
